@@ -2,6 +2,7 @@ SpeedCrunch post 0.7
 ---------------------
 binary is now relocatable (using BinReloc)
 new functions: MIN, MAX, SUM, PRODUCT
+new functions: DEGREES, RADIANS
 
 SpeedCrunch 0.7-beta2
 ---------------------
